ingress/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xmas
spec:
  selector:
    matchLabels:
      app: xmas
  replicas: 1
  template:
    metadata:
      labels:
        app: xmas
    spec:
      containers:
        - image: k8sxmasimages.azurecr.io/k8sxmasimage:latest
          imagePullPolicy: Always
          name: xmas
          ports:
          - containerPort: 8080
          resources:
        # Requests and limits are mendatory for AKS
          requests:
            cpu: 0.5
            memory: 128Mi
          limits:
            cpu: 4
            memory: 4G
