ingress/service.yml
apiVersion: v1
kind: Service
metadata:
  name: xmas
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: xmas
