ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: xmas
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    #cert-manager.io/issuer: "letsencrypt-staging"

spec:
  tls:
  - hosts:
    - xmas.algosup.com
    secretName: quickstart-example-tls
  rules:
  - host: xmas.algosup.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: xmas
            port:
              number: 80
